<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNeutralBg">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorNeutralBg">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:background="@drawable/light_background"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_main_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_main_app_name"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_main_app_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="48dp"
                android:text="@string/activity_main_city_template"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_main_app_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_date_template"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/fragment_main_app_city_name"
                app:layout_constraintTop_toBottomOf="@+id/fragment_main_app_city_name" />

            <TextView
                android:id="@+id/activity_main_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/activity_main_temperature_template"
                android:textColor="@color/colorWhite"
                android:textSize="64sp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/fragment_main_app_date"
                app:layout_constraintTop_toBottomOf="@+id/fragment_main_app_date" />

            <TextView
                android:id="@+id/activity_main_temperature_dim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/activity_main_temperature_dim"
                android:textColor="@color/colorWhite"
                android:textSize="64sp"
                app:layout_constraintBottom_toBottomOf="@+id/activity_main_temperature"
                app:layout_constraintStart_toEndOf="@+id/activity_main_temperature"
                app:layout_constraintTop_toTopOf="@+id/activity_main_temperature" />

            <ImageView
                android:id="@+id/activity_main_icon_sun"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/activity_main_temperature_dim"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/activity_main_temperature_dim"
                app:srcCompat="@drawable/ic_sun" />

            <View
                android:id="@+id/view_weather_details"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/components_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <ImageView
                android:id="@+id/activity_main_precipitation_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toTopOf="@+id/activity_main_precipitation_text"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_precipitation_text"
                app:layout_constraintStart_toStartOf="@+id/activity_main_precipitation_text"
                app:layout_constraintTop_toTopOf="@+id/view_weather_details"
                app:srcCompat="@drawable/ic_drop" />

            <ImageView
                android:id="@+id/activity_main_humidity_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_humidity_text"
                app:layout_constraintStart_toStartOf="@+id/activity_main_humidity_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_precipitation_icon"
                app:srcCompat="@drawable/ic_humidity" />

            <ImageView
                android:id="@+id/activity_main_wind_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_wind_text"
                app:layout_constraintStart_toStartOf="@+id/activity_main_wind_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_humidity_icon"
                app:srcCompat="@drawable/ic_flag" />

            <ImageView
                android:id="@+id/activity_main_day_icon"
                android:layout_width="60dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_day_text"
                app:layout_constraintStart_toStartOf="@+id/activity_main_day_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_wind_icon"
                app:srcCompat="@drawable/ic_day_night" />

            <TextView
                android:id="@+id/activity_main_precipitation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/precipitation"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/activity_main_precipitation_value"
                app:layout_constraintEnd_toStartOf="@+id/activity_main_humidity_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/view_weather_details"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_precipitation_icon" />

            <TextView
                android:id="@+id/activity_main_humidity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/activity_main_wind_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/activity_main_precipitation_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_precipitation_text" />

            <TextView
                android:id="@+id/activity_main_wind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/activity_main_day_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/activity_main_humidity_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_humidity_text" />

            <TextView
                android:id="@+id/activity_main_day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/day_and_night"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/view_weather_details"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/activity_main_wind_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_wind_text" />

            <TextView
                android:id="@+id/activity_main_precipitation_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_precipitation_value"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/view_weather_details"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_precipitation_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/activity_main_precipitation_text"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_precipitation_text" />

            <TextView
                android:id="@+id/activity_main_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_humidity_value"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_humidity_text"
                app:layout_constraintStart_toStartOf="@+id/activity_main_humidity_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_precipitation_value" />

            <TextView
                android:id="@+id/activity_main_wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_wind_value"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_wind_text"
                app:layout_constraintStart_toStartOf="@+id/activity_main_wind_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_humidity_value" />

            <TextView
                android:id="@+id/activity_main_day_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_day_value"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_day_text"
                app:layout_constraintStart_toStartOf="@+id/activity_main_day_text"
                app:layout_constraintTop_toTopOf="@+id/activity_main_wind_value" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragment_main_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/components_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_weather_details" />

            <TextView
                android:id="@+id/fragment_main_pereived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_pereived"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@+id/activity_main_temperature"
                app:layout_constraintStart_toStartOf="@+id/activity_main_temperature"
                app:layout_constraintTop_toBottomOf="@+id/activity_main_temperature" />

            <TextView
                android:id="@+id/fragment_main_pereived_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/fragment_main_pereived_value_template"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/fragment_main_pereived"
                app:layout_constraintTop_toTopOf="@+id/fragment_main_pereived" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>